# AutoGrader

./: .env  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
src/: cli.yaml  hello.txt  main.rs  readFile  restore.rs  structure.rs  term.rs
src/core/: config.rs  exit.rs  files.rs  mod.rs  parser.rs  run.rs
src/modules/: config.rs  lang.rs  mod.rs  parser.rs  run.rs
src/modules/config/: root.rs
src/modules/db/: mod.rs  mysql.rs  pgsql.rs
src/modules/lang/: cpp.rs  mod.rs
tests/: config.json  config.toml  config2.json  sum.test.json
tests/sum/: sum.case.test  sum.cpp  sum.desc.md  sum.out.test  sum.test.toml  sum1.txt  sum2.txt  wsol.py
