[package]
name = "AutoGrader"
description = "AutoGrader Rust-backend"
version = "0.1.0"
authors = ["Thanapat Chotipun <devpatrick.cho@gmail.com>"]
edition = "2021"

[dependencies]
actix-web = "3"
ansi_term = "0.12"
clap = { version = "^2.34.0", features =["yaml","color","suggestions"] }
glob = "0.3.0"
log = { version = "0.4.14", features = ["std"] }
rand = "0.8.4"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "1.0"
postgres = "0.19.2"
nanoid = "^0.4"
walkdir = "2.3.2"
