[package]
name = "AutoGrader"
description = "AutoGrader Rust-backend"
version = "0.1.0"
authors = ["Thanapat Chotipun <devpatrick.cho@gmail.com>"]
edition = "2021"

[dependencies]
actix-web = "3"
ansi_term = "0.12"
async-process = "1.3"
clap = { version = "^2.34.0", features =["yaml","color","suggestions"] }
glob = "0.3.0"
log = { version = "0.4.14", features = ["std"] }
nanoid = "^0.4"
postgres = "0.19.2"
rand = "0.8.4"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.14.0", features = ["full"] }
walkdir = "2.3.2"