[package]
authors = ["Thanapat Chotipun <devpatrick.cho@gmail.com>"]
description = "AutoGrader Rust-backend"
edition = "2021"
name = "AutoGrader"
version = "1.0.1"

[dependencies]
ansi_term = "0.12"
async-process = "1.3"
clap = {version = "3.1.6", features = ["derive","cargo"]}
glob = "0.3.0"
log = {version = "0.4.14", features = ["std"]}
nanoid = "^0.4"
postgres = "0.19.2"
rand = "0.8.4"
serde = {version = "^1.0", features = ["derive"]}
serde_json = "1.0"
tokio = {version = "^1.18.5", features = ["full"]}
wait-timeout = "0.2"
walkdir = "2.3.2"
